<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CloudChatApp</string>
    //preference activity string
    <string name="preference_server_address">http://host-155-246-163-19.dhcp.stevens-tech.edu:8080/chat</string>
    <string name="preference_client_name">sni</string>
    <string name="preference_setButton_text">set preference</string>
    <string name="preference_option_client_activity">client activity</string>
    //client activity string
    <string name="set_client_message">set client message</string>
    <string name="register">register</string>
    <string name="client_set_preference">preference activity</string>
    <string name="active_client_activity">active clients</string>
    <string name="registration_service">registration</string>
    <string name="send_service">sendMessage</string>
    <string name="setup_chatRoom">new ChatRoom</string>
    //active client activity
    <string name="main_client_activity">Client</string>
    //message client activity

    //default layout/menu variables
    <string name="default_cancel">cancel</string>
    <string name="send_message">send message</string>
    <string name="title_activity_active_client">ActiveClientActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_client_message">ClientMessage</string>

    //dialog
    <string name="send_message_dialog_text">are you sure send the message?</string>
    <string name="send_message_dialog_send_button_text">send</string>
    <string name="send_message_dialog_cancel_button_text">cancel</string>
    <string name="setup_chatRoom_dialog_text">please choose a room name</string>
    <string name="setup_chatRoom_dialog_send_button_text">new room</string>
    <string name="setup_chatRoom_dialog_cancel_button_text">cancel</string>

    //error
    <string name="service_not_available">service not available</string>
    <string name="invalid_lat_long_used">invalid latitude or longitude used</string>
    <string name="no_address_found">no address found</string>
    <string name="address_found">address found</string>

</resources>
