<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/client_to_preference_activity"
        android:showAsAction="ifRoom"
        android:title="@string/client_set_preference"/>
    <item
        android:id="@+id/client_to_active_client_activity"
        android:showAsAction="ifRoom"
        android:title="@string/active_client_activity"/>

    <item
        android:id="@+id/client_registration_service"
        android:showAsAction="ifRoom"
        android:title="@string/registration_service"/>

    <item
        android:id="@+id/client_send_service"
        android:showAsAction="ifRoom"
        android:title="@string/send_service"/>

    <item
        android:id="@+id/client_setup_chatRoom"
        android:showAsAction="ifRoom"
        android:title="@string/setup_chatRoom"/>
</menu>