<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/preference_client_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preference_client_name"/>
    <EditText
        android:id="@+id/preference_server_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preference_server_address"/>
    <Button
        android:id="@+id/preference_set_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preference_setButton_text"/>

</LinearLayout>